# kameo-snake-handler

./: .gitignore  Cargo.toml  Makefile  README.md
crates/kameo-child-process/: Cargo.toml  README.md
crates/kameo-child-process/proptest-regressions/: lib.txt
crates/kameo-child-process/src/: callback.rs  callback_runtime.rs  error.rs  framing.rs  handshake.rs  lib.rs  metrics.rs  tracing_utils.rs
crates/kameo-child-process/tests/: callback_runtime.rs  lib.rs
crates/kameo-python-ir-derive/: Cargo.toml
crates/kameo-python-ir-derive/src/: lib.rs
crates/kameo-snake-handler/: Cargo.toml  README.md
crates/kameo-snake-handler/docs/: python-bindings.md
crates/kameo-snake-handler/proptest-regressions/serde_py/: mod.txt
crates/kameo-snake-handler/src/: actor.rs  builder.rs  callback.rs  error.rs  lib.rs  macros.rs  serde_py.rs  telemetry.rs  tracing_utils.rs
crates/kameo-snake-handler/src/codegen_py/: callback.rs  emitter.rs  ir.rs  mod.rs
crates/kameo-snake-handler/src/macros/: mod.rs  py_callback.rs  py_dynamic.rs
crates/kameo-snake-handler/src/serde_py/: de.rs  mod.rs  ser.rs
crates/kameo-snake-testing/: Cargo.toml
crates/kameo-snake-testing/python/: bench_async.py  dspy_orky_trader.py  dspy_trader.py  logic.py  logic_async.py  logic_streaming.py  ork_logic.py  ork_logic_async.py  requirements.txt  streaming_callback_test.py
crates/kameo-snake-testing/python/bench_async/: __init__.py  callback_generated_types.py  callback_request_types.py  invocation_generated_types.py
crates/kameo-snake-testing/python/dspy_trader/: __init__.py  callback_generated_types.py  callback_request_types.py  invocation_generated_types.py
crates/kameo-snake-testing/python/logic/: __init__.py  callback_generated_types.py
crates/kameo-snake-testing/python/logic_async/: __init__.py  callback_generated_types.py
crates/kameo-snake-testing/python/logic_streaming/: __init__.py  callback_generated_types.py  callback_request_types.py  invocation_generated_types.py
crates/kameo-snake-testing/python/streaming_callback_test/: __init__.py  callback_generated_types.py  callback_request_types.py  invocation_generated_types.py
crates/kameo-snake-testing/src/: lib.rs  main.rs  ork_logic.py
src/: lib.rs  main.rs
