[package]
name = "kameo-child-process"
version = "0.1.0"
edition = "2024"

[dependencies]
kameo = "0.16"
bincode = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
parity-tokio-ipc = "0.9"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
uuid = { version = "1.17.0", features = ["v4"] }
tracing = "*"
tracing-subscriber = "*"
futures = "0.3"
thiserror = "1.0"
interprocess = { version = "1.0", features = ["tokio_support"] }
