[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ryan Noon <ryanmnoon@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Common dependencies
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["derive"] }
ipc-channel = "0.18"
kameo = { version = "0.16", features = ["macros"] }
kameo_macros = "0.16"
async-trait = "0.1"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
interprocess = "1.0"
nix = "0.27"
rand = "0.8"
parity-tokio-ipc = "0.9"

# Python integration
pyo3 = { version = "0.25", features = ["auto-initialize", "extension-module"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }

# Development dependencies
proptest = "1.4"

[workspace.metadata.maturin]
python-source = "python"
python-packages = ["kameo-snake-testing"] 