[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ryan Noon <ryanmnoon@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Common dependencies
tokio = { version = "1.28", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
kameo = "0.16"
kameo_macros = "0.16"
async-trait = "0.1"
base64 = "0.21"
uuid = { version = "1.4", features = ["v4", "serde"] }
futures = "0.3"
nix = { version = "0.27", features = ["process"] }
rand = "0.8"
parity-tokio-ipc = "0.9"
opentelemetry = { version = "0.30", features = ["trace"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.31"
opentelemetry-stdout = { version = "0.30", features = ["logs","metrics","trace"] }

# Python integration
pyo3 = { version = "0.25", features = ["auto-initialize"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime", "attributes"] }
serde_json = "1.0"

# Development dependencies
proptest = "1.4"

console-subscriber = "0.2"

[workspace.metadata.maturin]
python-source = "python"
python-packages = ["kameo-snake-testing"] 
