[package]
name = "kameo-child-process"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
kameo = { workspace = true }
kameo_macros = { workspace = true }
nix = { workspace = true }
opentelemetry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
pyo3 = { workspace = true }
tracing-futures = "0.2.5"
once_cell = "1.18"


[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"

