[package]
name = "kameo-child-process"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
kameo = { workspace = true }
kameo_macros = { workspace = true }
metrics = "0.24"
nix = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
pyo3 = { version = "0.25.1", optional = true, features = ["auto-initialize"] }
tracing-futures = "0.2.5"
once_cell = "1.18"
dashmap = "6.1.0"

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }

