[package]
name = "kameo-snake-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
either = "1.13.0"
futures = { workspace = true }
kameo = { workspace = true }
kameo-child-process = { path = "../kameo-child-process" }
kameo_macros = { workspace = true }
opentelemetry = { version = "0.21", features = ["trace"] }
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
pyo3-async-runtimes = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { workspace = true }
tracing = "0.1"
once_cell = "1.19"

[dev-dependencies]
kameo-snake-testing = { path = "../kameo-snake-testing" }
proptest = { workspace = true }
tokio-test = "0.4"
