[package]
name = "kameo-snake-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
bincode = { workspace = true }
either = "1.13.0"
futures = { workspace = true }
kameo = { workspace = true }
kameo-child-process = { path = "../kameo-child-process" }
kameo_macros = { workspace = true }
metrics = "0.24"
metrics-exporter-prometheus = "0.12"
metrics-exporter-opentelemetry = "0.1.0"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-stdout = { workspace = true }
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
pyo3-async-runtimes = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-futures = "0.2"
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
once_cell = "1.19"


[dev-dependencies]
kameo-snake-testing = { path = "../kameo-snake-testing" }
proptest = { workspace = true }
tokio-test = "0.4"
