[package]
name = "kameo-snake-testing"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "kameo-snake-testing"
path = "src/main.rs"



[dependencies]
kameo = { workspace = true }
kameo_macros = { workspace = true }
kameo-child-process = { path = "../kameo-child-process" }
kameo-snake-handler = { path = "../kameo-snake-handler" }
tokio = { version = "1.0", features = ["full", "test-util", "macros"] }
tracing = "0.1"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
postcard = { workspace = true }
async-trait = "0.1"
futures = { workspace = true }
indoc = "2.0"
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
serde_json = "1.0"
proptest = { workspace = true }
thiserror = { workspace = true }
once_cell = "1.19"
console-subscriber = "0.2"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-futures = "0.2"
rand.workspace = true

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"

[package.metadata.maturin]
python-source = "python"
python-packages = ["kameo-snake-testing"]
